
Table display now uses the background color cyan for all cells containing new lines
  not only in SQL result tables and in Object tree "Content" tables.

Table cell data popup now offers find, Xml/Json-reformatting and export functions for all tables.
  To open the cell data popup double-click a table cell.

Bug fixes:

Changed SQuirreL's main frame icon (arcon.png) from APNG (animated PNG) to a usual PNG file.
  Thanks to Federico Bruni for the fix.

The query
  "SELECT title--comment
  FROM books"
  failed because the comment started at the end of the first line without white spaces.

Updated/corrected the driver dialog description of SQuirreL's help.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/59
  Cell data popup and cell detail display: Improved readability JSON/XML highlighting
  in light and dark mode.

Loading Syntax- and Auto-Correct-properties raised ClassNotFoundException.
  The problem concerns
  - Menu File --> New Session Properties --> tab Syntax
  - Menu Session --> sub menu Syntax --> "Configure auto correct / abbreviations"
  The problem resulted from moving the Syntax-Plugin into SQuirreL's core
  and occurs in snapshot snapshot-20250302_2058 only.

SQL editor: UNION keyword was marked red as error.

Look and Feel Plugin: Cleaned up L&F Preferences UI.

#1532 MS Excel export: Fixed NoSuchMethodError

SQL result tab header marks:
  Fixed performance problem when the SQL editor contained SQLs that were longer than 8000 characters.
  For SQLs that are longer than 8000 characters marking of result tab headers is skipped.
  The maximum number of characters can be configured at menu File --> Global Preferences
  --> tab SQL --> section "SQL result tab header". The default value is 8000.

Improved the performance of SQL result tab header marking for large SQL editor content.

SQL result tab header marks:
  The option "Compare SQLs disregarding comments, line feeds and other white spaces" did not work properly.