@@ -9,3 +9,4 @@ ExportToFileHandler.error.writing.file=Error writing file ''{0}'' : {1}
 ExportToMultiSheetMsExcelHandler.executingQuery.n.of.m.for.sheet.named=Executing the query {0} of {1} for sheet named {2}
 
 ExportToMultiSheetMsExcelHandler.error.writing.msexcel.workbook=Error writing MS-Excel workbook ''{0}'' : {1}
+ExportToMultiSheetMsExcelHandler.missingSheetNameForWorkbook=MS Excel export: No sheet name passed for workbook {0}
