@@ -1,0 +1,7 @@
+package net.sourceforge.squirrel_sql.client.session.event;
+
+public enum ToBeExecutedNextDecision
+{
+   EXECUTE,
+   DO_NOT_EXECUTE;
+}
